# pypackd

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: bench_serialize.py
docs/plans/: 2026-04-13-001-feat-unified-serializer-plan.md
docs/solutions/best-practices/: unified-serializer-msgspec-pydantic-2026-04-13.md
src/serializer/: __init__.py  _core.py  _dispatch.py  _exceptions.py  _pack.py  _pydantic.py
tests/: conftest.py  test_all_types.py  test_dispatch.py  test_dispatch_comprehensive.py  test_pack.py  test_pydantic_comprehensive.py  test_pydantic_decode.py  test_pydantic_encode.py  test_serializer.py  test_threading.py  test_type_coverage_gaps.py
