[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serializer"
version = "0.1.0"
description = "Unified Python serializer with msgspec MessagePack backend"
requires-python = ">=3.10"
dependencies = [
    "msgspec>=0.18",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
dev = [
    "pytest>=8.0",
    "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/serializer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
