[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypackd"
version = "0.1.1"
description = "Unified Python serializer with msgspec MessagePack backend"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Georg" },
]
keywords = ["serialization", "msgspec", "messagepack", "pydantic", "dataclass"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "msgspec>=0.18",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
dev = [
    "pytest>=8.0",
    "pydantic>=2.0",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/georg/packd"

[tool.hatch.build.targets.wheel]
packages = ["src/serializer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
